# sciagent

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_train.py  train_with_code_params.py
sciagent/: __init__.py  __main__.py  agent_llm.py  analyzer.py  cli.py  code_parser.py  code_tracker.py  config_loader.py  diff_engine.py  env_checker.py  environment.py  exporter.py  fingerprint.py  guardian.py  history.py  log_parser.py  models.py  param_parser.py  reporting.py  setup.py  snapshots.py  track.py  ui.py
